{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 68,
  "lineage": "5ca0ac6b-6ce5-7f5a-2a3e-7a4d0bab8d47",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:security-group/sg-093c579992ca29d86",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-093c579992ca29d86",
            "ingress": [],
            "name": "amazon-cluster-cluster-2025040412585070530000000a",
            "name_prefix": "amazon-cluster-cluster-",
            "owner_id": "631172387421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "amazon-cluster",
              "Name": "amazon-cluster-cluster"
            },
            "tags_all": {
              "Example": "amazon-cluster",
              "Name": "amazon-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:security-group/sg-047467c1e44c9ac1a",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-047467c1e44c9ac1a",
            "ingress": [],
            "name": "amazon-cluster-node-20250404125850704400000009",
            "name_prefix": "amazon-cluster-node-",
            "owner_id": "631172387421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "amazon-cluster",
              "Name": "amazon-cluster-node",
              "kubernetes.io/cluster/amazon-cluster": "owned"
            },
            "tags_all": {
              "Example": "amazon-cluster",
              "Name": "amazon-cluster-node",
              "kubernetes.io/cluster/amazon-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3787263761",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-093c579992ca29d86",
            "security_group_rule_id": "sgr-09cbfe536a84a6add",
            "self": false,
            "source_security_group_id": "sg-047467c1e44c9ac1a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2199970297",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-047467c1e44c9ac1a",
            "security_group_rule_id": "sgr-0d4f6b4e7c6411e2c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2530962891",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-047467c1e44c9ac1a",
            "security_group_rule_id": "sgr-0525e446a485fdbd2",
            "self": false,
            "source_security_group_id": "sg-093c579992ca29d86",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3561124424",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-047467c1e44c9ac1a",
            "security_group_rule_id": "sgr-059decb7f2333eb81",
            "self": false,
            "source_security_group_id": "sg-093c579992ca29d86",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-486544862",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-047467c1e44c9ac1a",
            "security_group_rule_id": "sgr-064c841a55e96ca60",
            "self": false,
            "source_security_group_id": "sg-093c579992ca29d86",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-240921087",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-047467c1e44c9ac1a",
            "security_group_rule_id": "sgr-06e3c1b1c10c67bca",
            "self": false,
            "source_security_group_id": "sg-093c579992ca29d86",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1794972212",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-047467c1e44c9ac1a",
            "security_group_rule_id": "sgr-0639b5607b26b681c",
            "self": false,
            "source_security_group_id": "sg-093c579992ca29d86",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4068614434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-047467c1e44c9ac1a",
            "security_group_rule_id": "sgr-03d358727df69644f",
            "self": false,
            "source_security_group_id": "sg-093c579992ca29d86",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2792054882",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-047467c1e44c9ac1a",
            "security_group_rule_id": "sgr-0964c17d17acbfb07",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3258694902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-047467c1e44c9ac1a",
            "security_group_rule_id": "sgr-0c662128178e62c00",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1717837593",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-047467c1e44c9ac1a",
            "security_group_rule_id": "sgr-09cb0cb3133788920",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:network-acl/acl-0c09992651a357914",
            "default_network_acl_id": "acl-0c09992651a357914",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c09992651a357914",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "631172387421",
            "subnet_ids": [
              "subnet-00f417141d7e932e2",
              "subnet-03f5b80686a5a1270",
              "subnet-07c1630b28b700bdf",
              "subnet-081b0df67cd072e8c",
              "subnet-09d9a3568fd94d150"
            ],
            "tags": {
              "Name": "amazon-cluster-default"
            },
            "tags_all": {
              "Name": "amazon-cluster-default"
            },
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:route-table/rtb-06ecfece452af4c3a",
            "default_route_table_id": "rtb-06ecfece452af4c3a",
            "id": "rtb-06ecfece452af4c3a",
            "owner_id": "631172387421",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "amazon-cluster-default"
            },
            "tags_all": {
              "Name": "amazon-cluster-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:security-group/sg-003c2b7e053d0629b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-003c2b7e053d0629b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "631172387421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "amazon-cluster-default"
            },
            "tags_all": {
              "Name": "amazon-cluster-default"
            },
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0938363558fde6957",
            "arn": "arn:aws:ec2:us-east-1:631172387421:elastic-ip/eipalloc-0938363558fde6957",
            "domain": "vpc",
            "id": "eipalloc-0938363558fde6957",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-216-65-100.compute-1.amazonaws.com",
            "public_ip": "3.216.65.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "amazon-cluster-us-east-1a"
            },
            "tags_all": {
              "Name": "amazon-cluster-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0507353cca52f2cfc",
            "arn": "arn:aws:ec2:us-east-1:631172387421:elastic-ip/eipalloc-0507353cca52f2cfc",
            "domain": "vpc",
            "id": "eipalloc-0507353cca52f2cfc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-234-139-60.compute-1.amazonaws.com",
            "public_ip": "34.234.139.60",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "amazon-cluster-us-east-1b"
            },
            "tags_all": {
              "Name": "amazon-cluster-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:internet-gateway/igw-0a597f56c37bc016c",
            "id": "igw-0a597f56c37bc016c",
            "owner_id": "631172387421",
            "tags": {
              "Name": "amazon-cluster"
            },
            "tags_all": {
              "Name": "amazon-cluster"
            },
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0938363558fde6957",
            "association_id": "eipassoc-0e975cbdcfc8a3482",
            "connectivity_type": "public",
            "id": "nat-02714847e432ed00c",
            "network_interface_id": "eni-08d6f6759f46764f2",
            "private_ip": "10.0.1.182",
            "public_ip": "3.216.65.100",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0858bc65733f92a10",
            "tags": {
              "Name": "amazon-cluster-us-east-1a"
            },
            "tags_all": {
              "Name": "amazon-cluster-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0507353cca52f2cfc",
            "association_id": "eipassoc-0b0a66dabf8d049b5",
            "connectivity_type": "public",
            "id": "nat-06dba85ae4ab13db1",
            "network_interface_id": "eni-0ec3275db1a347962",
            "private_ip": "10.0.2.196",
            "public_ip": "34.234.139.60",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00f417141d7e932e2",
            "tags": {
              "Name": "amazon-cluster-us-east-1b"
            },
            "tags_all": {
              "Name": "amazon-cluster-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d2118f630ec9935f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02714847e432ed00c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2118f630ec9935f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c211ae74b7883a0a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06dba85ae4ab13db1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c211ae74b7883a0a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a597f56c37bc016c",
            "id": "r-rtb-0d188dff5cc1fe56d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d188dff5cc1fe56d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:route-table/rtb-012fcc666245946c1",
            "id": "rtb-012fcc666245946c1",
            "owner_id": "631172387421",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amazon-cluster-intra"
            },
            "tags_all": {
              "Name": "amazon-cluster-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:route-table/rtb-0d2118f630ec9935f",
            "id": "rtb-0d2118f630ec9935f",
            "owner_id": "631172387421",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amazon-cluster-private-us-east-1a"
            },
            "tags_all": {
              "Name": "amazon-cluster-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:route-table/rtb-0c211ae74b7883a0a",
            "id": "rtb-0c211ae74b7883a0a",
            "owner_id": "631172387421",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amazon-cluster-private-us-east-1b"
            },
            "tags_all": {
              "Name": "amazon-cluster-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:route-table/rtb-0d188dff5cc1fe56d",
            "id": "rtb-0d188dff5cc1fe56d",
            "owner_id": "631172387421",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amazon-cluster-public"
            },
            "tags_all": {
              "Name": "amazon-cluster-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03729b7660764ab55",
            "route_table_id": "rtb-012fcc666245946c1",
            "subnet_id": "subnet-03f5b80686a5a1270"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a78abf991ee24143",
            "route_table_id": "rtb-012fcc666245946c1",
            "subnet_id": "subnet-09d9a3568fd94d150"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd117a6c6144bb97",
            "route_table_id": "rtb-0d2118f630ec9935f",
            "subnet_id": "subnet-081b0df67cd072e8c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbc447a8c6bb6c87",
            "route_table_id": "rtb-0c211ae74b7883a0a",
            "subnet_id": "subnet-07c1630b28b700bdf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0c969d6eb0726f5",
            "route_table_id": "rtb-0d188dff5cc1fe56d",
            "subnet_id": "subnet-0858bc65733f92a10"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0384402bf948a1c33",
            "route_table_id": "rtb-0d188dff5cc1fe56d",
            "subnet_id": "subnet-00f417141d7e932e2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:subnet/subnet-03f5b80686a5a1270",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f5b80686a5a1270",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631172387421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-cluster-intra-us-east-1a"
            },
            "tags_all": {
              "Name": "amazon-cluster-intra-us-east-1a"
            },
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:subnet/subnet-09d9a3568fd94d150",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d9a3568fd94d150",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631172387421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-cluster-intra-us-east-1b"
            },
            "tags_all": {
              "Name": "amazon-cluster-intra-us-east-1b"
            },
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:subnet/subnet-081b0df67cd072e8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081b0df67cd072e8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631172387421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-cluster-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "amazon-cluster-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:subnet/subnet-07c1630b28b700bdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c1630b28b700bdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631172387421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-cluster-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "amazon-cluster-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:subnet/subnet-0858bc65733f92a10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0858bc65733f92a10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631172387421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-cluster-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "amazon-cluster-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:subnet/subnet-00f417141d7e932e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f417141d7e932e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631172387421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-cluster-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "amazon-cluster-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03c828eed3ae6e67f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631172387421:vpc/vpc-03c828eed3ae6e67f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c09992651a357914",
            "default_route_table_id": "rtb-06ecfece452af4c3a",
            "default_security_group_id": "sg-003c2b7e053d0629b",
            "dhcp_options_id": "dopt-032f4435ea8511674",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c828eed3ae6e67f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ecfece452af4c3a",
            "owner_id": "631172387421",
            "tags": {
              "Name": "amazon-cluster"
            },
            "tags_all": {
              "Name": "amazon-cluster"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}